[project]
name = "vpn-server"
dynamic = ["version"]
description = "Create an on demand VPN Server running with OpenVPN using AWS EC2"
readme = "README.md"
authors = [{ name = "Vignesh Sivanandha Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Operating System :: MacOS :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Networking :: Firewalls"
]
keywords = ["openvpn-server", "vpn-server", "aws-ec2"]
requires-python = ">=3.8"
dependencies = [
    "paramiko-expect==0.3.4", "paramiko==2.11.0", "boto3>=1.20.26", "botocore>=1.23.26",
    "psutil>=5.9.0", "python-dotenv>=0.19.2", "gmail-connector", "requests"
]

[tool.setuptools]
packages = ["vpn"]

[tool.setuptools.dynamic]
version = {attr = "vpn.version"}

[build-system]
requires = ["setuptools", "wheel", "paramiko-expect==0.3.4", "paramiko==2.11.0", "boto3>=1.20.26",
            "botocore>=1.23.26", "psutil>=5.9.0", "python-dotenv>=0.19.2", "gmail-connector", "requests"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "pre-commit"]

[project.urls]
Homepage        = "https://github.com/thevickypedia/vpn-server"
Docs            = "https://thevickypedia.github.io/vpn-server"
Source          = "https://github.com/thevickypedia/vpn-server"
"Bug Tracker"   = "https://github.com/thevickypedia/vpn-server/issues"
"Release Notes" = "https://github.com/thevickypedia/vpn-server/blob/main/release_notes.rst"
