[project]
name = "vpn-server"
dynamic = ["version", "dependencies"]
description = "Create an on demand VPN Server running with OpenVPN using AWS EC2"
readme = "README.md"
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Networking :: Firewalls"
]
keywords = ["openvpn-server", "vpn-server", "aws-ec2"]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["vpn"]

[tool.setuptools.dynamic]
version = { attr = "vpn.version" }
dependencies = { file = ["vpn/requirements.txt"] }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pre-commit"]

[project.urls]
Homepage = "https://github.com/thevickypedia/vpn-server"
Docs = "https://thevickypedia.github.io/vpn-server"
Source = "https://github.com/thevickypedia/vpn-server"
"Bug Tracker" = "https://github.com/thevickypedia/vpn-server/issues"
"Release Notes" = "https://github.com/thevickypedia/vpn-server/blob/main/release_notes.rst"
